# perovskite-stability-ml

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  environment.yml  model_card.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
configs/model/: logreg.yaml  random_forest.yaml
data/raw/: ion_properties_template.csv
data/synthetic/: abx3_synthetic.csv
models/: cv_summary.json  features.json  logreg.joblib  train_config.yaml
notebooks/: 01_eda.ipynb  02_training.ipynb  03_explainability_shap.ipynb
reports/: metrics_with_ci.json
scripts/: make_synthetic_dataset.py  run_all.sh
src/perostab/: __init__.py  cli.py  dataset.py  descriptors.py  evaluate.py  explain.py  labeling.py  models.py  train.py
src/perostab/utils/: logger.py  seeds.py
tests/: test_descriptors.py  test_labeling.py  test_pipeline_smoke.py
