[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "perostab"
version = "0.1.0"
description = "Predict ABX3 perovskite stability with physics-aware descriptors"
authors = [{ name = "Aditya", email = "" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "shap>=0.42",
  "typer>=0.9",
  "joblib>=1.3",
  "pydantic>=2.0",
  "statsmodels>=0.14",
  "imbalanced-learn>=0.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "black>=23.7",
  "isort>=5.12",
  "flake8>=6.1",
  "mypy>=1.5",
  "pre-commit>=3.3",
  "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
files = ["src/perostab"]
ignore_missing_imports = true
strict_optional = false
